replaced MethodModel with MethodModelCopy, but still all of this is not tested